--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "linebreak-style": ["error", "unix"],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "camelcase": "error"
   }
 }
