--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,5 @@
 * @calebafework @golden-stateOfmind @c0dezer019
-/auth/signup.ejs @calebafework
+/views/auth/signup.ejs @calebafework
 /public/css/signup.css @calebafework
+/views/auth/login.ejs @golden-stateOfmind
+/public/css/login.css @golden-stateOfmind
